
                CHANGES IN party VERSION 0.8-4 (2006-04-04)

    o    renamed argument `teststattype' to `teststat' with defaults
         c("quad", "max") in order to be compatible with the `coin' package, 
         version >= 0.4-5

    o    use `1 - (1 - p)^k' instead of `p * k' for Bonferroni-adjustment.
         Node 7 for the `GlaucomaM' data is now splitted in addition (in tms).



                CHANGES IN party VERSION 0.8-3 (2006-03-20)

    o   `predict' returned nonsensical results in case a tree was 
        fitted to a multivariate response variable. Now a list with one
        element for each observation is returned.


                CHANGES IN party VERSION 0.8-2 (2006-03-01)

    o    plotting buglets fixed: improved axis in MOB plots,
         correct (transparent) background on jpeg() and png() devices.


		CHANGES IN `party' VERSION 0.8-1 (2006-02-23)


    o    `testtype' can be Bonferroni, MonteCarlo, Univariate and
         Teststatistic (instead of Raw)		

    o    removed unnecessary constraint on weights in `cforest'

    o    maximize raw test statistics for random forest by default.


		CHANGES IN `party' VERSION 0.8-0 (2006-02-15)		


    o    `cforest', an implementation of Breiman's random forest ensemble
         algorithm based on conditional inference trees (`ctree') has been
	 added. It is somewhat experimental and thus for advanced users only.

    o    `mob', an object-oriented implementation of a recently suggested
         algorithm for model-based recursive partitioning (Zeileis, Hothorn,
	 Hornik, 2005) has been added. It works out of the box for partitioning
	 (generalized) linear regression models, others can be easily plugged
	 in. A new vignette "MOB" describes the implementation ideas and provides
	 a few examples.

    o    new S3 generic reweight() with methods for (g)linearModel
         for re-fitting a model with different weights.

    o    new argument `maxdepth' to `ctree_control' which allows for