@@ -33,7 +33,8 @@ Objects can be created by calls of the form \code{new("RandomForest", ...)}.
 
     ### honest (i.e., out-of-bag) cross-classification of 
     ### true vs. predicted classes
-    table(mammoexp$ME, predict(cforest(ME ~ ., data = mammoexp, ntree = 50), 
+    table(mammoexp$ME, predict(cforest(ME ~ ., data = mammoexp, 
+                               control = cforest_control(ntree = 50)), 
                                OOB = TRUE))
 }
 \keyword{classes}
