@@ -1,6 +1,6 @@
 
 R : Copyright 2006, The R Foundation for Statistical Computing
-Version 2.3.0 alpha (2006-04-04 r37647)
+Version 2.3.0 alpha (2006-04-06 r37661)
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -41,14 +41,16 @@ Loading required package: class
 > gctorture(on = GCtorture)
 > 
 > data("GlaucomaM", package = "ipred")
-> rf <- cforest(Class ~ ., data = GlaucomaM, ntree = 100)
+> rf <- cforest(Class ~ ., data = GlaucomaM, 
++     control = cforest_control(ntree = 100))
 Warning message:
 no admissible split found 
 > stopifnot(mean(GlaucomaM$Class != predict(rf)) < 
 +           mean(GlaucomaM$Class != predict(rf, OOB = TRUE)))
 > 
 > data("GBSG2", package = "ipred")
-> rf <- cforest(Surv(time, cens) ~ ., data = GBSG2, ntree = 100)
+> rf <- cforest(Surv(time, cens) ~ ., data = GBSG2, 
++     control = cforest_control(ntree = 100))
 There were 50 or more warnings (use warnings() to see the first 50)
 > treeresponse(rf, newdata = GBSG2[1:2,])
 [[1]]
